bug fix: overflow on x-axis

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -7,6 +7,8 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
   width: 100vw;
   height: 100vh;
   background-color: #f2f2f2;
@@ -20,6 +22,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 #star {
@@ -134,11 +137,12 @@ strong {
 
 
 #instructions {
+  margin: 0;
   padding: 0;
   margin-bottom: 5%;
-  width: 100%;
   position: absolute;
   left: 0;
+  right: 0;
   top: 0;
 }
 #return-button {
